# paulsha-hippo

./: .gitignore  .paul-project.yml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.cfg  setup.py
.cortex/: work-items.yaml
.github/: pull_request_template.md
changelog.d/: 125-code-migration.md  125-policy-tests.md  125-second-cut.md  19-lock-sharding.md  36-timer-backlog-reconcile.md  55-local-vllm-harness.md  56-review-fixes.md  57-redaction-openai-key-lookbehind.md  bootstrap.md  changelog-convention-doc.md  cross-cli-consumption.md  dream-resource-governance.md  feature-10-backend-matrix.md  feature-14-project-registry.md  feature-17-recall-cli.md  feature-18-applied-signal.md  feature-19-doctor-runtime-health.md  feature-19-lock-sharding-ingest.md  fix-15-atomize-failure-chain.md  fix-16-index-rebuild.md  fix-atomizer-co-gem.md  fix-dream-service-interpreter.md  issue-34-agent-command-selection.md  issue-34-copilot-flush-race.md  issue-34-eligible-reconciliation.md  issue-34-external-headless-profiles.md  issue-34-frontmatter-trailing-colon.md  issue-34-hook-python-authority.md  issue-34-install-attestation.md  issue-34-janitor-rich-project.md  issue-34-legacy-pipx-hooks.md  issue-34-live-build-provenance.md  issue-34-publication-health.md  issue-34-recovery-source-authority.md  issue-34-release-closeout.md  issue-34-release-readiness-spec.md  issue-34-semantic-grounding.md  issue-34-service-shebang.md  launch-v0.1.0.md  lib-session-readers.md  (+5 more)
docs/: backend-matrix.md  cross-cli-capability-matrix.md  project-registry-contract.md  release-readiness.md  (+1 more)
(+330 files in other folders)
