[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paulsha-hippo"
version = "0.1.0"
description = "跨 LLM vendor 的經驗筆記基座：session 蒸餾、dream 整理、wakeup 回灌"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pyyaml>=6"]

[project.scripts]
hippo = "paulsha_hippo.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["paulsha_hippo*"]
